<resources>
    <string name="app_name">KisahnesiaSimpleApp</string>
    <string name="title">Judul Cerita</string>
    <string name="sinopsis">Sinopsis Cerita</string>
    <string name="region">Provinsi</string>
    <string name="genre">Genre</string>
    <string name="about">About</string>
    <string name="name">Putu Agus Dharma Kusuma</string>
    <string name="email">agusdharma48@gmail.com</string>
    <string name="share">Share</string>
    <string-array name="data_title">
        <item>Alue Naga</item>
        <item>Ande-Ande Lumut</item>
        <item>Asal Muasal Warna Burung Gagak Hitam</item>
        <item>Asal Usul Danau Maninjau</item>
        <item>Bawang Merah Bawang Putih</item>
        <item>Kancil Buaya</item>
        <item>Legenda Batu Menangis</item>
        <item>Legenda Prambanan</item>
        <item>Legenda Selat Bali</item>
        <item>Legenda Toba</item>
        <item>Lutung Kasarung dan Purbasari</item>
        <item>Malin Kundang</item>
        <item>Si Gajah Semut</item>
        <item>Telaga Bidadari</item>
        <item>Timun Mas</item>
    </string-array>
    <string-array name="data_genre">
        <item>Mitos</item>
        <item>Cerita Rakyat</item>
        <item>Fabel</item>
        <item>Cerita Rakyat</item>
        <item>Cerita Rakyat</item>
        <item>Fabel</item>
        <item>Legenda</item>
        <item>Legenda</item>
        <item>Legenda</item>
        <item>Legenda</item>
        <item>Cerita Rakyat</item>
        <item>Mitos</item>
        <item>Fabel</item>
        <item>Cerita Rakyat</item>
        <item>Mitos</item>
    </string-array>
    <string-array name="data_region">
        <item>Riau</item>
        <item>Jawa Timur</item>
        <item>Nusantara</item>
        <item>Sumatra Barat</item>
        <item>Yogyakarta</item>
        <item>Nusantara</item>
        <item>Kalimantan Barat</item>
        <item>Yogyakarta</item>
        <item>Bali</item>
        <item>Sumatera Utara</item>
        <item>Jawa Barat</item>
        <item>Sumatra Barat</item>
        <item>Nusantara</item>
        <item>Kalimantan Selatan</item>
        <item>Jawa Tengah</item>
    </string-array>
</resources>