<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="30dp"
        android:paddingHorizontal="20dp"
        tools:context=".DetailActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/imageDetailImageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/timun_mas"
                tools:ignore="ContentDescription"
                android:layout_marginBottom="30dp"/>

        <TextView
                android:id="@+id/regionDetailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/region"
                />

        <TextView
                android:id="@+id/titleDetailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginVertical="5dp"
                />

        <TextView
                android:id="@+id/genreDetailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:layout_marginBottom="20dp"
                />

        <TextView
                android:id="@+id/synopsisDetailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sinopsis"
                android:justificationMode="inter_word"
                />

        <Button
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"/>

    </LinearLayout>

</ScrollView>